feat:fasthome-2: implement end point to create building and user
